--- a/Modules/Employee/composer.json
+++ b/Modules/Employee/composer.json
@@ -10,10 +10,11 @@
     "extra": {
         "laravel": {
             "providers": [
-                "Prettus\\Repository\\Providers\\RepositoryServiceProvider"
+                "Prettus\\Repository\\Providers\\RepositoryServiceProvider",
+                "Maatwebsite\\Excel\\ExcelServiceProvider"
             ],
             "aliases": {
-
+                "Excel": "Maatwebsite\\Excel\\Facades\\Excel"
             }
         }
     },
@@ -23,6 +24,7 @@
         }
     },
     "require": {
-        "prettus/l5-repository": "^2.9"
+        "prettus/l5-repository": "^2.9",
+        "maatwebsite/excel": "^3.1"
     }
 }
