--- a/Modules/Employee/composer.json
+++ b/Modules/Employee/composer.json
@@ -10,6 +10,7 @@
     "extra": {
         "laravel": {
             "providers": [
+                "Nwidart\\Modules\\LaravelModulesServiceProvider",
                 "Prettus\\Repository\\Providers\\RepositoryServiceProvider",
                 "Maatwebsite\\Excel\\ExcelServiceProvider"
             ],
@@ -24,7 +25,9 @@
         }
     },
     "require": {
+        "nwidart/laravel-modules": "^10.0",
         "prettus/l5-repository": "^2.9",
-        "maatwebsite/excel": "^3.1"
+        "maatwebsite/excel": "^3.1",
+        "propaganistas/laravel-phone": "^5.0"
     }
 }
