--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
         "laravel/tinker": "^2.8",
         "maatwebsite/excel": "^3.1",
         "nwidart/laravel-modules": "^10.0",
-        "prettus/l5-repository": "^2.9"
+        "prettus/l5-repository": "^2.9",
+        "propaganistas/laravel-phone": "^5.0"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
