--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
+        "league/flysystem-aws-s3-v3": "^3.16",
         "maatwebsite/excel": "^3.1",
         "nwidart/laravel-modules": "^10.0",
         "prettus/l5-repository": "^2.9",
