--- a/Modules/Employee/composer.json
+++ b/Modules/Employee/composer.json
@@ -12,7 +12,8 @@
             "providers": [
                 "Nwidart\\Modules\\LaravelModulesServiceProvider",
                 "Prettus\\Repository\\Providers\\RepositoryServiceProvider",
-                "Maatwebsite\\Excel\\ExcelServiceProvider"
+                "Maatwebsite\\Excel\\ExcelServiceProvider",
+                "L5Swagger\\L5SwaggerServiceProvider"
             ],
             "aliases": {
                 "Excel": "Maatwebsite\\Excel\\Facades\\Excel"
@@ -28,6 +29,7 @@
         "nwidart/laravel-modules": "^10.0",
         "prettus/l5-repository": "^2.9",
         "maatwebsite/excel": "^3.1",
-        "propaganistas/laravel-phone": "^5.0"
+        "propaganistas/laravel-phone": "^5.0",
+        "darkaonline/l5-swagger": "^8.5"
     }
 }
